# PolliniVeneziaBot

./: .editorconfig  .pre-commit-config.yaml  Pipfile  README.md  clock.py  makefile  pyproject.toml  start.py
.github/workflows/: codeql-analysis.yml
pollinivenezianibot/: db_istance.py  runner.py  telegram_api.py  utils.py
tests/: test_pollinivenezianibot.py
