[tool.poetry]
name = "pollinivenezianibot"
version = "0.1.0"
description = ""
authors = ["Fundor333 <github@fundor333.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
pyrebase4 = "^4.4.3"
apscheduler = "^3.7.0"
beautifulsoup4 = "^4.9.3"
rich = "^9.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.7.2"
autopep8 = "^1.5.6"
rope = "^0.18.0"
safety = "^1.10.3"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
